--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@ body
     position: relative;
     width: 100%;
     max-width: 1000px;
-    min-height: 100px;
+    min-height: 1000px;
     background: #fff;
+    margin: 50px;
     display: grid; 
     grid-template-columns: 1fr 2fr;
     box-shadow: 0 35px 55px rgba(0, 0, 0, 0.1);
@@ -34,6 +35,25 @@ body
     position: relative;
     background:#003147;
     padding: 40px;
+}
+
+.profileText
+{
+    position: relative;         
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.profileText .imgBx
+{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .container .right_side
